<resources>
    <string name="app_name">donation</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please give generously</string>
    <string name="donateButton">Donate</string>
    <string name="payPal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="totalText">Total so far: €</string>
    <string name="amountText">\@string/amountText</string>
    <string name="menuSettings">Settings</string>
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="reportTitle">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="signupButton">Sign up</string>
    <string name="loginButton">Login</string>
    <string name="greeting">Welcome to Donation app</string>
    <string name="signupTitle">Sign up for the Donation App</string>
    <string name="signupSubtitle">Enter details below</string>
    <string name="signupFirstName">First Name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="registerButton">Register</string>
    <string name="loginSubtitle">You must be registered</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginTitle">Login to Donation</string>
    <string name="loginSignIn">Sign In</string>
    <string name="menuLogout">Logout</string>
</resources>
